# annoq-py

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/annoq/: __init__.py  annoq.py
test/: test.py
