[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "annoq"
version = "0.0.1"
authors = [
  { name="Akshala Bhatnagar", email="akshalab@usc.edu" },
]
description = "Python package for annoq-api"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]